@startuml

hide empty attributes
hide empty methods
hide circle

skinparam shadowing false
skinparam classFontStyle Bold
skinparam ActivityBackgroundColor Silver
skinparam ActivityBorderColor DimGray

skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor Cornsilk
    ArrowColor DimGray
    BorderThickness 1
    BorderColor DimGray
}

title "Edit Command Class diagram"

class "EditCommand" as Object\EditCommand {
     - index: Index
     - editPersonDescriptor: EditPersonDescriptor
     + execute(model) : CommandResult
     + equals(other) : boolean
}

class "Command" as Object\Command <<abstract>> {
    + execute(model)
}

class "EditPersonDescriptor" as Object\EditPersonDescriptor {
    - name: Name
    - phone: Phone
    - email: Email
    - address: Address
    - tag: Tag
    - jobDescription: JobDescription
    - interviewDate: InterviewDate
    - internDuration: InternDuration
    - salary: Salary
    - note: Note
}

class "Index" as Object\Index {
    // attributes omitted for brevity
}

class "Model" as Object\Model <<interface>> {
    - addressbook: AddressBook
    + hasPerson(person: Person): boolean
    + addPerson(person: Person): void
}

Object\EditCommand --> Object\Model
Object\EditCommand ...> Object\EditPersonDescriptor
Object\EditCommand --|> Object\Command
Object\EditCommand --> Object\Index

@enduml
